#1 fix: php artisan make command permission error

--- a/Docker/php-fpm/Dockerfile
+++ b/Docker/php-fpm/Dockerfile
@@ -1,4 +1,7 @@
 FROM php:8.2.7-fpm-bullseye
+ARG USER_ID=1000
+ENV USER_NAME=www-data
+ARG GROUP_NAME=www-data
 
 RUN apt-get update && \ 
     apt-get -y upgrade && \
@@ -21,6 +24,13 @@ WORKDIR /var/www
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && \
     rm -rf /tmp/src
 
-CMD ["/entrypoint.sh"]
+RUN usermod -u ${USER_ID} ${USER_NAME}
+RUN groupmod -g ${USER_ID} ${GROUP_NAME}
+RUN chown -R ${USER_NAME}:${GROUP_NAME} /var/www && \
+    chown -R ${USER_NAME}:${GROUP_NAME} /var/log/ && \
+    #   chown -R ${USER_NAME}:${GROUP_NAME} /etc/supervisor/conf.d/ && \
+    chown -R ${USER_NAME}:${GROUP_NAME} $PHP_INI_DIR/conf.d/ && \
+    chown -R ${USER_NAME}:${GROUP_NAME} /tmp
 
 EXPOSE 9000
+CMD ["/entrypoint.sh"]
