#3 test: test.ymlにJWTの環境変数記述

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,5 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: php artisan test --env=testing.ci
